# biomed-ref-pipeline

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  index.html  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: DEMO.md  GITHUB_PUBLISH.md  MAINTAINER_AUTOMATION.md  OPEN_SOURCE_READINESS.md  USER_WORKFLOW.md
duanwu-signup-20260620/: index.html
examples/: README.md
scripts/: publish_to_github.ps1  run_sample.ps1  test.ps1
src/biomed_ref_pipeline/: __init__.py  cli.py  docx_tools.py  io_utils.py  jcr.py  planning.py  pmid.py  pubmed.py  qc.py  ris.py  scoring.py  workspace.py  zotero.py  zotero_ooxml.py
tests/: test_planning_scoring_docx.py  test_pmid.py  test_pubmed_parse.py  test_ris_jcr_qc.py  test_workspace.py  test_zotero_ooxml.py
